--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  lottie: ^2.3.1 
+  lottie: ^2.3.1
+   
   animated_text_kit: ^4.3.0
   geolocator: ^14.0.2
   intl: ^0.20.2
@@ -21,6 +22,22 @@ dependencies:
   firebase_core: ^3.6.0
   syncfusion_flutter_charts: ^28.1.38
   firebase_auth: ^5.3.1
+  cloud_firestore: ^5.6.12
+  file_picker: ^10.3.3
+  open_file: ^3.5.10
+  animations: ^2.1.0
+  image_picker: ^1.2.0
+  url_launcher: ^6.3.2
+  google_maps_flutter: ^2.13.1
+  fl_chart: 0.68.0
+  shimmer: ^3.0.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
+  google_generative_ai: ^0.4.7
+
+
+
+
 
   
 
@@ -53,6 +70,7 @@ flutter:
     - assets/women_salon.jpeg
     - assets/men_salon.jpeg
     - assets/explore.jpeg
+    - assets/images/explore.jpeg
     - assets/manicure.jpeg
     - assets/pedicure.jpeg
     - assets/haircare.jpeg
@@ -82,6 +100,7 @@ flutter:
     - assets/child-care.jpeg
     - assets/plumberwallpaper.jpg
     - assets/logoicon.png
+    - assets/profilepic.jpg
 
     # 👇 Add your services folder (includes all 5 JPGs)
     - assets/services/
