--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.14.2
   google_generative_ai: ^0.4.7
+  firebase_database: ^11.3.10
+  shared_preferences: ^2.5.3
 
 
 
@@ -47,6 +49,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logoicon.png"
+
   
 
 flutter:
